--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":"cross-env NODE_ENV=development nodemon backend/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon backend/index.js",
     "start": "cross-env NODE_ENV=production node backend/index.js"
   },
   "repository": {
@@ -29,6 +29,14 @@
     "multer": "^1.4.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "css-loader": "^3.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "nodemon": "^1.19.1",
+    "style-loader": "^0.23.1",
+    "timeago.js": "^4.0.0-beta.2",
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.2"
   }
 }
